# ChamNeural

./: .gitignore  CMakeLists.txt  Main.cpp  data.txt
include/: chammath.h  chamneural.h
src/: chammath.cpp  chamneural.cpp
